--- a/contact.html
+++ b/contact.html
@@ -170,11 +170,11 @@
 							</li>
 							<li>
 								<h5 class="fz-18-5">Phone:</h5>
-								<span>+0 123-456-7890, +00 123-456-789</span>
+								<span>+91 9123456789</span>
 							</li>
 							<li>
 								<h5 class="fz-18-5">Email:</h5>
-								<span><a href="#">hello@example.com</a></span>
+								<span><a href="#">stallionsdigi@gmail.com</a></span>
 							</li>
 						</ul>
 					</div>
