--- a/index-2.html
+++ b/index-2.html
@@ -4,7 +4,7 @@
 <head>	
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
-	<title> Ailng - Creative Consulting & Business Agency HTML Template </title>
+	<title> Stallions Digital | Digital Marketing & IT Services Consultancy </title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
