--- a/index-2.html
+++ b/index-2.html
@@ -860,7 +860,7 @@
 					</div>
 				</div>
 				<div class="copyright text-center">
-					<p class="mb-0">© 2020 All Right Reserved, Ailng</p>
+					<p class="mb-0">© 2024 All Right Reserved, Stallions Digital | Digital Marketing & IT Services Consultancy</p>
 				</div>
 			</div>
 		</div>
