--- a/about.html
+++ b/about.html
@@ -567,7 +567,7 @@
 					</div>
 				</div>
 				<div class="copyright">
-					<p>© 2020 All Right Reserved, Ailng</p>
+					<p>© 2024 All Right Reserved, Stallions Digital | Digital Marketing & IT Services Consultancy</p>
 					<ul class="footer-social">
 						<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
 						<li><a href="#"><i class="fab fa-instagram"></i></a></li>
